tests/snapshots/sort.snap
---
source: tests/golden.rs
expression: yaml
---
program: |-
  Data data = new Data();

  class Data {
      int size = 0;
      int[100] buffer = new int[100];
      int pointer = 0;

      void add(int value) {
          this.buffer[this.pointer++] = value;
          return;
      }

      void sort() {
          if (this.size <= 1) {
              return;
          }
          this.quickSort(0, this.size - 1);
          return;
      }

      void quickSort(int low, int high) {
          if (low >= high) {
              return;
          }

          int mid = low + (high - low) / 2;
          int pivot = this.buffer[mid];

          int i = low;
          int j = high;

          while (i <= j) {
              while (this.buffer[i] < pivot) {
                  i++;
              }
              while (this.buffer[j] > pivot) {
                  j--;
              }
              if (i <= j) {
                  int temp = this.buffer[i];
                  this.buffer[i] = this.buffer[j];
                  this.buffer[j] = temp;
                  i++;
                  j--;
              }
          }

          this.quickSort(low, j);
          this.quickSort(i, high);
          return;
      }

      void print() {
          for (int i = 0; i < this.size; i++) {
              iout(4, this.buffer[i]);
          }
          return;
      }
  }

  void Main() {
      while (data.size == 0 || data.size != data.pointer) {}
      data.sort();
      data.print();
      return;
  }

  void interrupt0() {
      if (data.size == 0) {
          data.size = iin(0);
      }
      else {
          data.add(iin(0));
      }
      return;
  }
ticks: 7164
input:
- tick: 200
  value: 6
- tick: 600
  value: 101
- tick: 1000
  value: 3
- tick: 1400
  value: -99
- tick: 1800
  value: 99
- tick: 2200
  value: 24
- tick: 2600
  value: 52
int_output:
- -99
- 3
- 24
- 52
- 99
- 101
char_output: ''
data_section:
- 1
- 0
- 0
- 48
- 2
machine_code: |-
  0x0000: 0x03005C00   MOV.w A7, #0x0001869F
  0x0002: 0x03005400   MOV.w A5, #0x000003E8
  0x0004: 0x42000000   CALL.b 0x0000000000000055
  0x0006: 0x00000000   HLT.b
  0x0007: 0x0358BC00   MOV.w -(A7), A6
  0x0008: 0x035C5800   MOV.w A6, A7
  0x0009: 0x255C005C   SUB.w #0x00000000, A7
  0x000B: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x000D: 0x03C04400   MOV.w A1, (A0:#0x00000001)
  0x000F: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x0011: 0x03C02400   MOV.w D1, (A0:#0x00000002)
  0x0013: 0x2124E028   ADD.w (#0x00000000), D1
  0x0015: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x0017: 0x0328C000   MOV.w (A0:#0x00000002), D2
  0x0019: 0x03243400   MOV.w D5, D1
  0x001A: 0x03D8C500   MOV.w (A1:D5), (A6:#0x00000003)
  0x001C: 0x03585C00   MOV.w A7, A6
  0x001D: 0x039C5800   MOV.w A6, (A7)+
  0x001E: 0x44000000   RET.b
  0x001F: 0x0358BC00   MOV.w -(A7), A6
  0x0020: 0x035C5800   MOV.w A6, A7
  0x0021: 0x255C005C   SUB.w #0x00000000, A7
  0x0023: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x0025: 0x03C02400   MOV.w D1, (A0:#0x00000000)
  0x0027: 0x05E02400   CMP.w D1, (#0x00000000)
  0x0029: 0x6A000000   BLE.b 0x000000000000002F
  0x002B: 0x03002400   MOV.w D1, #0x00000000
  0x002D: 0x40000000   JMP.b 0x0000000000000031
  0x002F: 0x03002400   MOV.w D1, #0x00000001
  0x0031: 0x04240000   CMP.b #0x00000001, D1
  0x0033: 0x60000000   BEQ.b 0x00000000000000AD
  0x0035: 0x40000000   JMP.b 0x00000000000000B0
  0x0037: 0x0358BC00   MOV.w -(A7), A6
  0x0038: 0x035C5800   MOV.w A6, A7
  0x0039: 0x255C005C   SUB.w #0x00000006, A7
  0x003B: 0x05D8D800   CMP.w (A6:#0x00000003), (A6:#0x00000004)
  0x003E: 0x66000000   BGE.b 0x0000000000000044
  0x0040: 0x03002400   MOV.w D1, #0x00000000
  0x0042: 0x40000000   JMP.b 0x0000000000000046
  0x0044: 0x03002400   MOV.w D1, #0x00000001
  0x0046: 0x04240000   CMP.b #0x00000001, D1
  0x0048: 0x60000000   BEQ.b 0x00000000000000D1
  0x004A: 0x40000000   JMP.b 0x00000000000000D4
  0x004C: 0x0358BC00   MOV.w -(A7), A6
  0x004D: 0x035C5800   MOV.w A6, A7
  0x004E: 0x255C005C   SUB.w #0x00000001, A7
  0x0050: 0x03E0D800   MOV.w (A6:#0xFFFFFFFF), (#0x00000001)
  0x0053: 0x40000000   JMP.b 0x00000000000001C0
  0x0055: 0x03544000   MOV.w A0, A5
  0x0056: 0x21540054   ADD.w #0x00000003, A5
  0x0058: 0x03E0C000   MOV.w (A0:#0x00000000), (#0x00000001)
  0x005B: 0x21540054   ADD.w #0x00000003, A5
  0x005D: 0x2D540054   AND.w #0xFFFFFFFC, A5
  0x005F: 0x03544400   MOV.w A1, A5
  0x0060: 0x21540054   ADD.w #0x00000064, A5
  0x0062: 0x0344C000   MOV.w (A0:#0x00000001), A1
  0x0064: 0x03E0C000   MOV.w (A0:#0x00000002), (#0x00000001)
  0x0067: 0x0340E000   MOV.w (#0x00000002), A0
  0x0069: 0x0358BC00   MOV.w -(A7), A6
  0x006A: 0x035C5800   MOV.w A6, A7
  0x006B: 0x255C005C   SUB.w #0x00000000, A7
  0x006D: 0x40000000   JMP.b 0x00000000000001E8
  0x006F: 0x0324BC00   MOV.w -(A7), D1
  0x0070: 0x0328BC00   MOV.w -(A7), D2
  0x0071: 0x032CBC00   MOV.w -(A7), D3
  0x0072: 0x0330BC00   MOV.w -(A7), D4
  0x0073: 0x0340BC00   MOV.w -(A7), A0
  0x0074: 0x0344BC00   MOV.w -(A7), A1
  0x0075: 0x0358BC00   MOV.w -(A7), A6
  0x0076: 0x035C5800   MOV.w A6, A7
  0x0077: 0x255C005C   SUB.w #0x00000000, A7
  0x0079: 0x03E04000   MOV.w A0, (#0x00000002)
  0x007B: 0x03C02400   MOV.w D1, (A0:#0x00000000)
  0x007D: 0x05E02400   CMP.w D1, (#0x00000001)
  0x007F: 0x60000000   BEQ.b 0x0000000000000085
  0x0081: 0x03002400   MOV.w D1, #0x00000000
  0x0083: 0x40000000   JMP.b 0x0000000000000087
  0x0085: 0x03002400   MOV.w D1, #0x00000001
  0x0087: 0x04240000   CMP.b #0x00000001, D1
  0x0089: 0x60000000   BEQ.b 0x0000000000000239
  0x008B: 0x40000000   JMP.b 0x0000000000000240
  0x008D: 0x0358BC00   MOV.w -(A7), A6
  0x008E: 0x035C5800   MOV.w A6, A7
  0x008F: 0x255C005C   SUB.w #0x00000000, A7
  0x0091: 0x03E02000   MOV.w D0, (#0x00000001)
  0x0093: 0x03585C00   MOV.w A7, A6
  0x0094: 0x039C5800   MOV.w A6, (A7)+
  0x0095: 0x44000000   RET.b
  0x0096: 0x0358BC00   MOV.w -(A7), A6
  0x0097: 0x035C5800   MOV.w A6, A7
  0x0098: 0x255C005C   SUB.w #0x00000000, A7
  0x009A: 0x02E02000   MOV.b D0, (#0x00000003)
  0x009C: 0x03585C00   MOV.w A7, A6
  0x009D: 0x039C5800   MOV.w A6, (A7)+
  0x009E: 0x44000000   RET.b
  0x009F: 0x0358BC00   MOV.w -(A7), A6
  0x00A0: 0x035C5800   MOV.w A6, A7
  0x00A1: 0x255C005C   SUB.w #0x00000000, A7
  0x00A3: 0x03585C00   MOV.w A7, A6
  0x00A4: 0x039C5800   MOV.w A6, (A7)+
  0x00A5: 0x44000000   RET.b
  0x00A6: 0x0358BC00   MOV.w -(A7), A6
  0x00A7: 0x035C5800   MOV.w A6, A7
  0x00A8: 0x255C005C   SUB.w #0x00000000, A7
  0x00AA: 0x03585C00   MOV.w A7, A6
  0x00AB: 0x039C5800   MOV.w A6, (A7)+
  0x00AC: 0x44000000   RET.b
  0x00AD: 0x03585C00   MOV.w A7, A6
  0x00AE: 0x039C5800   MOV.w A6, (A7)+
  0x00AF: 0x44000000   RET.b
  0x00B0: 0x40000000   JMP.b 0x00000000000000B2
  0x00B2: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x00B4: 0x03C02400   MOV.w D1, (A0:#0x00000000)
  0x00B6: 0x2524E028   SUB.w (#0x00000000), D1
  0x00B8: 0x0324BC00   MOV.w -(A7), D1
  0x00B9: 0x0328BC00   MOV.w -(A7), D2
  0x00BA: 0x032CBC00   MOV.w -(A7), D3
  0x00BB: 0x0330BC00   MOV.w -(A7), D4
  0x00BC: 0x0340BC00   MOV.w -(A7), A0
  0x00BD: 0x0344BC00   MOV.w -(A7), A1
  0x00BE: 0x0328BC00   MOV.w -(A7), D2
  0x00BF: 0x03E0BC00   MOV.w -(A7), (#0x00000001)
  0x00C1: 0x03D8BC00   MOV.w -(A7), (A6:#0x00000002)
  0x00C3: 0x42000000   CALL.b 0x0000000000000037
  0x00C5: 0x215C005C   ADD.w #0x00000003, A7
  0x00C7: 0x039C4400   MOV.w A1, (A7)+
  0x00C8: 0x039C4000   MOV.w A0, (A7)+
  0x00C9: 0x039C3000   MOV.w D4, (A7)+
  0x00CA: 0x039C2C00   MOV.w D3, (A7)+
  0x00CB: 0x039C2800   MOV.w D2, (A7)+
  0x00CC: 0x039C2400   MOV.w D1, (A7)+
  0x00CD: 0x03202400   MOV.w D1, D0
  0x00CE: 0x03585C00   MOV.w A7, A6
  0x00CF: 0x039C5800   MOV.w A6, (A7)+
  0x00D0: 0x44000000   RET.b
  0x00D1: 0x03585C00   MOV.w A7, A6
  0x00D2: 0x039C5800   MOV.w A6, (A7)+
  0x00D3: 0x44000000   RET.b
  0x00D4: 0x40000000   JMP.b 0x00000000000000D6
  0x00D6: 0x25D8D824   SUB.w (A6:#0x00000003), (A6:#0x00000004)
  0x00D9: 0x2924E028   DIV.w (#0x00000004), D1
  0x00DB: 0x21D82824   ADD.w D2, (A6:#0x00000003)
  0x00DD: 0x0324D800   MOV.w (A6:#0xFFFFFFFF), D1
  0x00DF: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x00E1: 0x03C04400   MOV.w A1, (A0:#0x00000001)
  0x00E3: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFF)
  0x00E5: 0x03243400   MOV.w D5, D1
  0x00E6: 0x03C52800   MOV.w D2, (A1:D5)
  0x00E7: 0x0328D800   MOV.w (A6:#0xFFFFFFFE), D2
  0x00E9: 0x03D8D800   MOV.w (A6:#0xFFFFFFFD), (A6:#0x00000003)
  0x00EC: 0x03D8D800   MOV.w (A6:#0xFFFFFFFC), (A6:#0x00000004)
  0x00EF: 0x40000000   JMP.b 0x00000000000000F1
  0x00F1: 0x05D8D800   CMP.w (A6:#0xFFFFFFFD), (A6:#0xFFFFFFFC)
  0x00F4: 0x6A000000   BLE.b 0x00000000000000FA
  0x00F6: 0x03002400   MOV.w D1, #0x00000000
  0x00F8: 0x40000000   JMP.b 0x00000000000000FC
  0x00FA: 0x03002400   MOV.w D1, #0x00000001
  0x00FC: 0x04240000   CMP.b #0x00000001, D1
  0x00FE: 0x60000000   BEQ.b 0x0000000000000102
  0x0100: 0x40000000   JMP.b 0x0000000000000104
  0x0102: 0x40000000   JMP.b 0x0000000000000135
  0x0104: 0x0324BC00   MOV.w -(A7), D1
  0x0105: 0x0328BC00   MOV.w -(A7), D2
  0x0106: 0x032CBC00   MOV.w -(A7), D3
  0x0107: 0x0330BC00   MOV.w -(A7), D4
  0x0108: 0x0340BC00   MOV.w -(A7), A0
  0x0109: 0x0344BC00   MOV.w -(A7), A1
  0x010A: 0x03D8BC00   MOV.w -(A7), (A6:#0xFFFFFFFC)
  0x010C: 0x03D8BC00   MOV.w -(A7), (A6:#0x00000003)
  0x010E: 0x03D8BC00   MOV.w -(A7), (A6:#0x00000002)
  0x0110: 0x42000000   CALL.b 0x0000000000000037
  0x0112: 0x215C005C   ADD.w #0x00000003, A7
  0x0114: 0x039C4400   MOV.w A1, (A7)+
  0x0115: 0x039C4000   MOV.w A0, (A7)+
  0x0116: 0x039C3000   MOV.w D4, (A7)+
  0x0117: 0x039C2C00   MOV.w D3, (A7)+
  0x0118: 0x039C2800   MOV.w D2, (A7)+
  0x0119: 0x039C2400   MOV.w D1, (A7)+
  0x011A: 0x03202400   MOV.w D1, D0
  0x011B: 0x0324BC00   MOV.w -(A7), D1
  0x011C: 0x0328BC00   MOV.w -(A7), D2
  0x011D: 0x032CBC00   MOV.w -(A7), D3
  0x011E: 0x0330BC00   MOV.w -(A7), D4
  0x011F: 0x0340BC00   MOV.w -(A7), A0
  0x0120: 0x0344BC00   MOV.w -(A7), A1
  0x0121: 0x03D8BC00   MOV.w -(A7), (A6:#0x00000004)
  0x0123: 0x03D8BC00   MOV.w -(A7), (A6:#0xFFFFFFFD)
  0x0125: 0x03D8BC00   MOV.w -(A7), (A6:#0x00000002)
  0x0127: 0x42000000   CALL.b 0x0000000000000037
  0x0129: 0x215C005C   ADD.w #0x00000003, A7
  0x012B: 0x039C4400   MOV.w A1, (A7)+
  0x012C: 0x039C4000   MOV.w A0, (A7)+
  0x012D: 0x039C3000   MOV.w D4, (A7)+
  0x012E: 0x039C2C00   MOV.w D3, (A7)+
  0x012F: 0x039C2800   MOV.w D2, (A7)+
  0x0130: 0x039C2400   MOV.w D1, (A7)+
  0x0131: 0x03202400   MOV.w D1, D0
  0x0132: 0x03585C00   MOV.w A7, A6
  0x0133: 0x039C5800   MOV.w A6, (A7)+
  0x0134: 0x44000000   RET.b
  0x0135: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x0137: 0x03C04400   MOV.w A1, (A0:#0x00000001)
  0x0139: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFD)
  0x013B: 0x03243400   MOV.w D5, D1
  0x013C: 0x03C52800   MOV.w D2, (A1:D5)
  0x013D: 0x05D82800   CMP.w D2, (A6:#0xFFFFFFFE)
  0x013F: 0x68000000   BLT.b 0x0000000000000145
  0x0141: 0x03002400   MOV.w D1, #0x00000000
  0x0143: 0x40000000   JMP.b 0x0000000000000147
  0x0145: 0x03002400   MOV.w D1, #0x00000001
  0x0147: 0x04240000   CMP.b #0x00000001, D1
  0x0149: 0x60000000   BEQ.b 0x000000000000014D
  0x014B: 0x40000000   JMP.b 0x0000000000000155
  0x014D: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFD)
  0x014F: 0x2124E028   ADD.w (#0x00000000), D1
  0x0151: 0x0328D800   MOV.w (A6:#0xFFFFFFFD), D2
  0x0153: 0x40000000   JMP.b 0x0000000000000135
  0x0155: 0x40000000   JMP.b 0x0000000000000157
  0x0157: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x0159: 0x03C04400   MOV.w A1, (A0:#0x00000001)
  0x015B: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFC)
  0x015D: 0x03243400   MOV.w D5, D1
  0x015E: 0x03C52800   MOV.w D2, (A1:D5)
  0x015F: 0x05D82800   CMP.w D2, (A6:#0xFFFFFFFE)
  0x0161: 0x64000000   BGT.b 0x0000000000000167
  0x0163: 0x03002400   MOV.w D1, #0x00000000
  0x0165: 0x40000000   JMP.b 0x0000000000000169
  0x0167: 0x03002400   MOV.w D1, #0x00000001
  0x0169: 0x04240000   CMP.b #0x00000001, D1
  0x016B: 0x60000000   BEQ.b 0x000000000000016F
  0x016D: 0x40000000   JMP.b 0x0000000000000177
  0x016F: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFC)
  0x0171: 0x2524E028   SUB.w (#0x00000000), D1
  0x0173: 0x0328D800   MOV.w (A6:#0xFFFFFFFC), D2
  0x0175: 0x40000000   JMP.b 0x0000000000000157
  0x0177: 0x05D8D800   CMP.w (A6:#0xFFFFFFFD), (A6:#0xFFFFFFFC)
  0x017A: 0x6A000000   BLE.b 0x0000000000000180
  0x017C: 0x03002400   MOV.w D1, #0x00000000
  0x017E: 0x40000000   JMP.b 0x0000000000000182
  0x0180: 0x03002400   MOV.w D1, #0x00000001
  0x0182: 0x04240000   CMP.b #0x00000001, D1
  0x0184: 0x60000000   BEQ.b 0x0000000000000188
  0x0186: 0x40000000   JMP.b 0x00000000000001BC
  0x0188: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x018A: 0x03C04400   MOV.w A1, (A0:#0x00000001)
  0x018C: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFD)
  0x018E: 0x03243400   MOV.w D5, D1
  0x018F: 0x03C52800   MOV.w D2, (A1:D5)
  0x0190: 0x0328D800   MOV.w (A6:#0xFFFFFFFB), D2
  0x0192: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x0194: 0x03C0D800   MOV.w (A6:#0xFFFFFFFA), (A0:#0x00000001)
  0x0197: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x0199: 0x03C04400   MOV.w A1, (A0:#0x00000001)
  0x019B: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFC)
  0x019D: 0x03243400   MOV.w D5, D1
  0x019E: 0x03C52800   MOV.w D2, (A1:D5)
  0x019F: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFD)
  0x01A1: 0x03D84800   MOV.w A2, (A6:#0xFFFFFFFA)
  0x01A3: 0x03243400   MOV.w D5, D1
  0x01A4: 0x0328C900   MOV.w (A2:D5), D2
  0x01A5: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x01A7: 0x03C04400   MOV.w A1, (A0:#0x00000001)
  0x01A9: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFC)
  0x01AB: 0x03243400   MOV.w D5, D1
  0x01AC: 0x03D8C500   MOV.w (A1:D5), (A6:#0xFFFFFFFB)
  0x01AE: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFD)
  0x01B0: 0x2124E028   ADD.w (#0x00000000), D1
  0x01B2: 0x0328D800   MOV.w (A6:#0xFFFFFFFD), D2
  0x01B4: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFC)
  0x01B6: 0x2524E028   SUB.w (#0x00000000), D1
  0x01B8: 0x0328D800   MOV.w (A6:#0xFFFFFFFC), D2
  0x01BA: 0x40000000   JMP.b 0x00000000000001BE
  0x01BC: 0x40000000   JMP.b 0x00000000000001BE
  0x01BE: 0x40000000   JMP.b 0x00000000000000F1
  0x01C0: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x01C2: 0x03C02400   MOV.w D1, (A0:#0x00000000)
  0x01C4: 0x0524D800   CMP.w (A6:#0xFFFFFFFF), D1
  0x01C6: 0x68000000   BLT.b 0x00000000000001CC
  0x01C8: 0x03002400   MOV.w D1, #0x00000000
  0x01CA: 0x40000000   JMP.b 0x00000000000001CE
  0x01CC: 0x03002400   MOV.w D1, #0x00000001
  0x01CE: 0x04240000   CMP.b #0x00000001, D1
  0x01D0: 0x60000000   BEQ.b 0x00000000000001D4
  0x01D2: 0x40000000   JMP.b 0x00000000000001E5
  0x01D4: 0x03D84000   MOV.w A0, (A6:#0x00000002)
  0x01D6: 0x03C04400   MOV.w A1, (A0:#0x00000001)
  0x01D8: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFF)
  0x01DA: 0x03243400   MOV.w D5, D1
  0x01DB: 0x03C52800   MOV.w D2, (A1:D5)
  0x01DC: 0xA3042800   OUT.w #4, D2
  0x01DD: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFF)
  0x01DF: 0x2124E028   ADD.w (#0x00000000), D1
  0x01E1: 0x0328D800   MOV.w (A6:#0xFFFFFFFF), D2
  0x01E3: 0x40000000   JMP.b 0x00000000000001C0
  0x01E5: 0x03585C00   MOV.w A7, A6
  0x01E6: 0x039C5800   MOV.w A6, (A7)+
  0x01E7: 0x44000000   RET.b
  0x01E8: 0x03E04000   MOV.w A0, (#0x00000002)
  0x01EA: 0x03C02400   MOV.w D1, (A0:#0x00000000)
  0x01EC: 0x05E02400   CMP.w D1, (#0x00000001)
  0x01EE: 0x60000000   BEQ.b 0x00000000000001F4
  0x01F0: 0x03002400   MOV.w D1, #0x00000000
  0x01F2: 0x40000000   JMP.b 0x00000000000001F6
  0x01F4: 0x03002400   MOV.w D1, #0x00000001
  0x01F6: 0x03E04000   MOV.w A0, (#0x00000002)
  0x01F8: 0x03C02800   MOV.w D2, (A0:#0x00000000)
  0x01FA: 0x03E04000   MOV.w A0, (#0x00000002)
  0x01FC: 0x03C02C00   MOV.w D3, (A0:#0x00000002)
  0x01FE: 0x052C2800   CMP.w D2, D3
  0x01FF: 0x62000000   BNE.b 0x0000000000000205
  0x0201: 0x03002800   MOV.w D2, #0x00000000
  0x0203: 0x40000000   JMP.b 0x0000000000000207
  0x0205: 0x03002800   MOV.w D2, #0x00000001
  0x0207: 0x2E24282C   OR.b D2, D1
  0x0208: 0x042C0000   CMP.b #0x00000001, D3
  0x020A: 0x60000000   BEQ.b 0x000000000000020E
  0x020C: 0x40000000   JMP.b 0x0000000000000210
  0x020E: 0x40000000   JMP.b 0x00000000000001E8
  0x0210: 0x0324BC00   MOV.w -(A7), D1
  0x0211: 0x0328BC00   MOV.w -(A7), D2
  0x0212: 0x032CBC00   MOV.w -(A7), D3
  0x0213: 0x0330BC00   MOV.w -(A7), D4
  0x0214: 0x0340BC00   MOV.w -(A7), A0
  0x0215: 0x0344BC00   MOV.w -(A7), A1
  0x0216: 0x03E0BC00   MOV.w -(A7), (#0x00000002)
  0x0218: 0x42000000   CALL.b 0x000000000000001F
  0x021A: 0x215C005C   ADD.w #0x00000001, A7
  0x021C: 0x039C4400   MOV.w A1, (A7)+
  0x021D: 0x039C4000   MOV.w A0, (A7)+
  0x021E: 0x039C3000   MOV.w D4, (A7)+
  0x021F: 0x039C2C00   MOV.w D3, (A7)+
  0x0220: 0x039C2800   MOV.w D2, (A7)+
  0x0221: 0x039C2400   MOV.w D1, (A7)+
  0x0222: 0x03202400   MOV.w D1, D0
  0x0223: 0x0324BC00   MOV.w -(A7), D1
  0x0224: 0x0328BC00   MOV.w -(A7), D2
  0x0225: 0x032CBC00   MOV.w -(A7), D3
  0x0226: 0x0330BC00   MOV.w -(A7), D4
  0x0227: 0x0340BC00   MOV.w -(A7), A0
  0x0228: 0x0344BC00   MOV.w -(A7), A1
  0x0229: 0x03E0BC00   MOV.w -(A7), (#0x00000002)
  0x022B: 0x42000000   CALL.b 0x000000000000004C
  0x022D: 0x215C005C   ADD.w #0x00000001, A7
  0x022F: 0x039C4400   MOV.w A1, (A7)+
  0x0230: 0x039C4000   MOV.w A0, (A7)+
  0x0231: 0x039C3000   MOV.w D4, (A7)+
  0x0232: 0x039C2C00   MOV.w D3, (A7)+
  0x0233: 0x039C2800   MOV.w D2, (A7)+
  0x0234: 0x039C2400   MOV.w D1, (A7)+
  0x0235: 0x03202400   MOV.w D1, D0
  0x0236: 0x03585C00   MOV.w A7, A6
  0x0237: 0x039C5800   MOV.w A6, (A7)+
  0x0238: 0x44000000   RET.b
  0x0239: 0xA1002400   IN.w #0, D1
  0x023A: 0x03E04000   MOV.w A0, (#0x00000002)
  0x023C: 0x0324C000   MOV.w (A0:#0x00000000), D1
  0x023E: 0x40000000   JMP.b 0x0000000000000257
  0x0240: 0xA1002400   IN.w #0, D1
  0x0241: 0x0324BC00   MOV.w -(A7), D1
  0x0242: 0x0328BC00   MOV.w -(A7), D2
  0x0243: 0x032CBC00   MOV.w -(A7), D3
  0x0244: 0x0330BC00   MOV.w -(A7), D4
  0x0245: 0x0340BC00   MOV.w -(A7), A0
  0x0246: 0x0344BC00   MOV.w -(A7), A1
  0x0247: 0x0324BC00   MOV.w -(A7), D1
  0x0248: 0x03E0BC00   MOV.w -(A7), (#0x00000002)
  0x024A: 0x42000000   CALL.b 0x0000000000000007
  0x024C: 0x215C005C   ADD.w #0x00000002, A7
  0x024E: 0x039C4400   MOV.w A1, (A7)+
  0x024F: 0x039C4000   MOV.w A0, (A7)+
  0x0250: 0x039C3000   MOV.w D4, (A7)+
  0x0251: 0x039C2C00   MOV.w D3, (A7)+
  0x0252: 0x039C2800   MOV.w D2, (A7)+
  0x0253: 0x039C2400   MOV.w D1, (A7)+
  0x0254: 0x03202400   MOV.w D1, D0
  0x0255: 0x40000000   JMP.b 0x0000000000000257
  0x0257: 0x03585C00   MOV.w A7, A6
  0x0258: 0x039C5800   MOV.w A6, (A7)+
  0x0259: 0x039C4400   MOV.w A1, (A7)+
  0x025A: 0x039C4000   MOV.w A0, (A7)+
  0x025B: 0x039C3000   MOV.w D4, (A7)+
  0x025C: 0x039C2C00   MOV.w D3, (A7)+
  0x025D: 0x039C2800   MOV.w D2, (A7)+
  0x025E: 0x039C2400   MOV.w D1, (A7)+
  0x025F: 0x46000000   INTRET.b
log: ' INFO TICK 7163 | Result : 0'
