tests/snapshots/vector_test.snap
---
source: tests/golden.rs
expression: yaml
---
program: |-
  void Main() {
      int seed = 42;
      int[100] a = new int[100];
      for (int i = 0; i < 100; i++) {
          seed = (seed * 1103515245 + 12345) % 2147483648;
          a[i] = seed;
      }

      int[100] b = new int[100];
      for (int i = 0; i < 100; i++) {
          seed = (seed * 1103515245 + 12345) % 2147483648;
          b[i] = seed;
      }

      int[100] c = new int[100];
      for (int i = 0; i < 100; i++) {
          c[i] = a[i] + b[i];
      }

      for (int i = 0; i < 100; i++) {
          iout(4, c[i]);
      }
      return;
  }
ticks: 29099
input: []
int_output:
- 3329663154
- 2703558716
- 2142185982
- 3033834904
- 1955541546
- 951945300
- 2905932854
- 3735002992
- 2905301794
- 3254383084
- 1202342382
- 2182897352
- 2711989146
- 552557828
- 3915002662
- 2355215264
- 3397911442
- 2179752348
- 1913354206
- 2702970360
- 3942900490
- 1670453172
- 2738376726
- 2925866448
- 1407861250
- 711399244
- 3351671758
- 3860624168
- 1579391098
- 3589896292
- 2671713030
- 1958655488
- 2494029426
- 1869402876
- 3297181118
- 3451801176
- 2247527402
- 3382132500
- 3356906486
- 1700467760
- 890149090
- 2862109868
- 900781486
- 804937608
- 2716237146
- 1995516868
- 3181230822
- 1056901216
- 1633956178
- 1981570140
- 962575262
- 3542181560
- 1020603594
- 1218838132
- 3287093206
- 1011307152
- 1357277122
- 667134476
- 493318030
- 1591485416
- 2753321530
- 2255255332
- 2454983366
- 3064509120
- 751500338
- 737213884
- 2656285054
- 2938853144
- 3196962218
- 1611879892
- 2186970038
- 2842683632
- 1463791266
- 1084168044
- 2254979438
- 2271723592
- 3279105818
- 1484872324
- 2663391910
- 2495722784
- 2456436498
- 2422257436
- 2896224094
- 2772574072
- 1368282762
- 2427798836
- 310161302
- 3231373136
- 2271767938
- 761306316
- 1404128078
- 868431016
- 1712913402
- 4073051620
- 2009066118
- 1607470976
- 2907699698
- 1818331260
- 3909436734
- 2655764440
char_output: ''
data_section:
- 42
- 0
- 48
- 100
- 1103515245
- 12345
- 2147483648
- 1
machine_code: |-
  0x0000: 0x03005C00   MOV.w A7, #0x0001869F
  0x0002: 0x03005400   MOV.w A5, #0x000003E8
  0x0004: 0x42000000   CALL.b 0x0000000000000007
  0x0006: 0x00000000   HLT.b
  0x0007: 0x0358BC00   MOV.w -(A7), A6
  0x0008: 0x035C5800   MOV.w A6, A7
  0x0009: 0x25005C00   SUB.w A7, #0x00000008
  0x000B: 0x03E0D800   MOV.w (A6:#0xFFFFFFFF), (#0x00000000)
  0x000E: 0x21005400   ADD.w A5, #0x00000003
  0x0010: 0x2D005400   AND.w A5, #0xFFFFFFFC
  0x0012: 0x03544000   MOV.w A0, A5
  0x0013: 0x21005400   ADD.w A5, #0x00000064
  0x0015: 0x0340D800   MOV.w (A6:#0xFFFFFFFE), A0
  0x0017: 0x03E0D800   MOV.w (A6:#0xFFFFFFFD), (#0x00000001)
  0x001A: 0x40000000   JMP.b 0x000000000000004E
  0x001C: 0x0358BC00   MOV.w -(A7), A6
  0x001D: 0x035C5800   MOV.w A6, A7
  0x001E: 0x25005C00   SUB.w A7, #0x00000001
  0x0020: 0x03D8D800   MOV.w (A6:#0xFFFFFFFF), (A6:#0x00000002)
  0x0023: 0x03E02000   MOV.w D0, (#0x00000001)
  0x0025: 0x03585C00   MOV.w A7, A6
  0x0026: 0x039C5800   MOV.w A6, (A7)+
  0x0027: 0x44000000   RET.b
  0x0028: 0x0358BC00   MOV.w -(A7), A6
  0x0029: 0x035C5800   MOV.w A6, A7
  0x002A: 0x25005C00   SUB.w A7, #0x00000001
  0x002C: 0x03D8D800   MOV.w (A6:#0xFFFFFFFF), (A6:#0x00000002)
  0x002F: 0x02E02000   MOV.b D0, (#0x00000002)
  0x0031: 0x03585C00   MOV.w A7, A6
  0x0032: 0x039C5800   MOV.w A6, (A7)+
  0x0033: 0x44000000   RET.b
  0x0034: 0x0358BC00   MOV.w -(A7), A6
  0x0035: 0x035C5800   MOV.w A6, A7
  0x0036: 0x25005C00   SUB.w A7, #0x00000002
  0x0038: 0x03D8D800   MOV.w (A6:#0xFFFFFFFF), (A6:#0x00000002)
  0x003B: 0x03D8D800   MOV.w (A6:#0xFFFFFFFE), (A6:#0x00000003)
  0x003E: 0x03585C00   MOV.w A7, A6
  0x003F: 0x039C5800   MOV.w A6, (A7)+
  0x0040: 0x44000000   RET.b
  0x0041: 0x0358BC00   MOV.w -(A7), A6
  0x0042: 0x035C5800   MOV.w A6, A7
  0x0043: 0x25005C00   SUB.w A7, #0x00000002
  0x0045: 0x03D8D800   MOV.w (A6:#0xFFFFFFFF), (A6:#0x00000002)
  0x0048: 0x02D8D800   MOV.b (A6:#0xFFFFFFFE), (A6:#0x00000003)
  0x004B: 0x03585C00   MOV.w A7, A6
  0x004C: 0x039C5800   MOV.w A6, (A7)+
  0x004D: 0x44000000   RET.b
  0x004E: 0x05E0D800   CMP.w (A6:#0xFFFFFFFD), (#0x00000003)
  0x0051: 0x68000000   BLT.b 0x0000000000000057
  0x0053: 0x03002400   MOV.w D1, #0x00000000
  0x0055: 0x40000000   JMP.b 0x0000000000000059
  0x0057: 0x03002400   MOV.w D1, #0x00000001
  0x0059: 0x04240000   CMP.b #0x00000001, D1
  0x005B: 0x60000000   BEQ.b 0x000000000000005F
  0x005D: 0x40000000   JMP.b 0x000000000000007B
  0x005F: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFF)
  0x0061: 0x27E02400   MUL.w D1, (#0x00000004)
  0x0063: 0x03242800   MOV.w D2, D1
  0x0064: 0x21E02800   ADD.w D2, (#0x00000005)
  0x0066: 0x03282400   MOV.w D1, D2
  0x0067: 0x2BE02400   REM.w D1, (#0x00000006)
  0x0069: 0x0324D800   MOV.w (A6:#0xFFFFFFFF), D1
  0x006B: 0x03D84000   MOV.w A0, (A6:#0xFFFFFFFE)
  0x006D: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFD)
  0x006F: 0x03243800   MOV.w D6, D1
  0x0070: 0x03D8C200   MOV.w (A0:D6), (A6:#0xFFFFFFFF)
  0x0072: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFD)
  0x0074: 0x03242800   MOV.w D2, D1
  0x0075: 0x21E02800   ADD.w D2, (#0x00000007)
  0x0077: 0x0328D800   MOV.w (A6:#0xFFFFFFFD), D2
  0x0079: 0x40000000   JMP.b 0x000000000000004E
  0x007B: 0x21005400   ADD.w A5, #0x00000003
  0x007D: 0x2D005400   AND.w A5, #0xFFFFFFFC
  0x007F: 0x03544000   MOV.w A0, A5
  0x0080: 0x21005400   ADD.w A5, #0x00000064
  0x0082: 0x0340D800   MOV.w (A6:#0xFFFFFFFC), A0
  0x0084: 0x03E0D800   MOV.w (A6:#0xFFFFFFFB), (#0x00000001)
  0x0087: 0x40000000   JMP.b 0x0000000000000089
  0x0089: 0x05E0D800   CMP.w (A6:#0xFFFFFFFB), (#0x00000003)
  0x008C: 0x68000000   BLT.b 0x0000000000000092
  0x008E: 0x03002400   MOV.w D1, #0x00000000
  0x0090: 0x40000000   JMP.b 0x0000000000000094
  0x0092: 0x03002400   MOV.w D1, #0x00000001
  0x0094: 0x04240000   CMP.b #0x00000001, D1
  0x0096: 0x60000000   BEQ.b 0x000000000000009A
  0x0098: 0x40000000   JMP.b 0x00000000000000B6
  0x009A: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFF)
  0x009C: 0x27E02400   MUL.w D1, (#0x00000004)
  0x009E: 0x03242800   MOV.w D2, D1
  0x009F: 0x21E02800   ADD.w D2, (#0x00000005)
  0x00A1: 0x03282400   MOV.w D1, D2
  0x00A2: 0x2BE02400   REM.w D1, (#0x00000006)
  0x00A4: 0x0324D800   MOV.w (A6:#0xFFFFFFFF), D1
  0x00A6: 0x03D84000   MOV.w A0, (A6:#0xFFFFFFFC)
  0x00A8: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFB)
  0x00AA: 0x03243800   MOV.w D6, D1
  0x00AB: 0x03D8C200   MOV.w (A0:D6), (A6:#0xFFFFFFFF)
  0x00AD: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFB)
  0x00AF: 0x03242800   MOV.w D2, D1
  0x00B0: 0x21E02800   ADD.w D2, (#0x00000007)
  0x00B2: 0x0328D800   MOV.w (A6:#0xFFFFFFFB), D2
  0x00B4: 0x40000000   JMP.b 0x0000000000000089
  0x00B6: 0x21005400   ADD.w A5, #0x00000003
  0x00B8: 0x2D005400   AND.w A5, #0xFFFFFFFC
  0x00BA: 0x03544000   MOV.w A0, A5
  0x00BB: 0x21005400   ADD.w A5, #0x00000064
  0x00BD: 0x0340D800   MOV.w (A6:#0xFFFFFFFA), A0
  0x00BF: 0x03E0D800   MOV.w (A6:#0xFFFFFFF9), (#0x00000001)
  0x00C2: 0x40000000   JMP.b 0x00000000000000C4
  0x00C4: 0x05E0D800   CMP.w (A6:#0xFFFFFFF9), (#0x00000003)
  0x00C7: 0x68000000   BLT.b 0x00000000000000CD
  0x00C9: 0x03002400   MOV.w D1, #0x00000000
  0x00CB: 0x40000000   JMP.b 0x00000000000000CF
  0x00CD: 0x03002400   MOV.w D1, #0x00000001
  0x00CF: 0x04240000   CMP.b #0x00000001, D1
  0x00D1: 0x60000000   BEQ.b 0x00000000000000D5
  0x00D3: 0x40000000   JMP.b 0x00000000000000F2
  0x00D5: 0x03D84000   MOV.w A0, (A6:#0xFFFFFFFE)
  0x00D7: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFF9)
  0x00D9: 0x03243800   MOV.w D6, D1
  0x00DA: 0x03C22800   MOV.w D2, (A0:D6)
  0x00DB: 0x03D84000   MOV.w A0, (A6:#0xFFFFFFFC)
  0x00DD: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFF9)
  0x00DF: 0x03243800   MOV.w D6, D1
  0x00E0: 0x03C22C00   MOV.w D3, (A0:D6)
  0x00E1: 0x03282400   MOV.w D1, D2
  0x00E2: 0x212C2400   ADD.w D1, D3
  0x00E3: 0x03D84000   MOV.w A0, (A6:#0xFFFFFFFA)
  0x00E5: 0x03D82800   MOV.w D2, (A6:#0xFFFFFFF9)
  0x00E7: 0x03283800   MOV.w D6, D2
  0x00E8: 0x0324C200   MOV.w (A0:D6), D1
  0x00E9: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFF9)
  0x00EB: 0x03242800   MOV.w D2, D1
  0x00EC: 0x21E02800   ADD.w D2, (#0x00000007)
  0x00EE: 0x0328D800   MOV.w (A6:#0xFFFFFFF9), D2
  0x00F0: 0x40000000   JMP.b 0x00000000000000C4
  0x00F2: 0x03E0D800   MOV.w (A6:#0xFFFFFFF8), (#0x00000001)
  0x00F5: 0x40000000   JMP.b 0x00000000000000F7
  0x00F7: 0x05E0D800   CMP.w (A6:#0xFFFFFFF8), (#0x00000003)
  0x00FA: 0x68000000   BLT.b 0x0000000000000100
  0x00FC: 0x03002400   MOV.w D1, #0x00000000
  0x00FE: 0x40000000   JMP.b 0x0000000000000102
  0x0100: 0x03002400   MOV.w D1, #0x00000001
  0x0102: 0x04240000   CMP.b #0x00000001, D1
  0x0104: 0x60000000   BEQ.b 0x0000000000000108
  0x0106: 0x40000000   JMP.b 0x0000000000000118
  0x0108: 0x03D84000   MOV.w A0, (A6:#0xFFFFFFFA)
  0x010A: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFF8)
  0x010C: 0x03243800   MOV.w D6, D1
  0x010D: 0x03C22800   MOV.w D2, (A0:D6)
  0x010E: 0xA3042800   OUT.w #4, D2
  0x010F: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFF8)
  0x0111: 0x03242800   MOV.w D2, D1
  0x0112: 0x21E02800   ADD.w D2, (#0x00000007)
  0x0114: 0x0328D800   MOV.w (A6:#0xFFFFFFF8), D2
  0x0116: 0x40000000   JMP.b 0x00000000000000F7
  0x0118: 0x03585C00   MOV.w A7, A6
  0x0119: 0x039C5800   MOV.w A6, (A7)+
  0x011A: 0x44000000   RET.b
log: ' INFO TICK 29098 | Result : 0'
