tests/snapshots/vector_test_simd.snap
---
source: tests/golden.rs
expression: yaml
---
program: |-
  void Main() {
      int seed = 42;
      int[100] a = new int[100];
      for (int i = 0; i < 100; i++) {
          seed = (seed * 1103515245 + 12345) % 2147483648;
          a[i] = seed;
      }

      int[100] b = new int[100];
      for (int i = 0; i < 100; i++) {
          seed = (seed * 1103515245 + 12345) % 2147483648;
          b[i] = seed;
      }

      int[100] c = new int[100];
      for (int i = 0; i < 100; i += 4) {
          c[i:4] = a[i:4] + b[i:4];
      }

      for (int i = 0; i < 100; i++) {
          iout(4, c[i]);
      }
      return;
  }
ticks: 21334
input: []
int_output:
- 3329663154
- 2703558716
- 2142185982
- 3033834904
- 1955541546
- 951945300
- 2905932854
- 3735002992
- 2905301794
- 3254383084
- 1202342382
- 2182897352
- 2711989146
- 552557828
- 3915002662
- 2355215264
- 3397911442
- 2179752348
- 1913354206
- 2702970360
- 3942900490
- 1670453172
- 2738376726
- 2925866448
- 1407861250
- 711399244
- 3351671758
- 3860624168
- 1579391098
- 3589896292
- 2671713030
- 1958655488
- 2494029426
- 1869402876
- 3297181118
- 3451801176
- 2247527402
- 3382132500
- 3356906486
- 1700467760
- 890149090
- 2862109868
- 900781486
- 804937608
- 2716237146
- 1995516868
- 3181230822
- 1056901216
- 1633956178
- 1981570140
- 962575262
- 3542181560
- 1020603594
- 1218838132
- 3287093206
- 1011307152
- 1357277122
- 667134476
- 493318030
- 1591485416
- 2753321530
- 2255255332
- 2454983366
- 3064509120
- 751500338
- 737213884
- 2656285054
- 2938853144
- 3196962218
- 1611879892
- 2186970038
- 2842683632
- 1463791266
- 1084168044
- 2254979438
- 2271723592
- 3279105818
- 1484872324
- 2663391910
- 2495722784
- 2456436498
- 2422257436
- 2896224094
- 2772574072
- 1368282762
- 2427798836
- 310161302
- 3231373136
- 2271767938
- 761306316
- 1404128078
- 868431016
- 1712913402
- 4073051620
- 2009066118
- 1607470976
- 2907699698
- 1818331260
- 3909436734
- 2655764440
char_output: ''
data_section:
- 42
- 0
- 48
- 100
- 1103515245
- 12345
- 2147483648
- 1
- 4
machine_code: |-
  0x0000: 0x03005C00   MOV.w A7, #0x0001869F
  0x0002: 0x03005400   MOV.w A5, #0x000003E8
  0x0004: 0x42000000   CALL.b 0x0000000000000007
  0x0006: 0x00000000   HLT.b
  0x0007: 0x0358BC00   MOV.w -(A7), A6
  0x0008: 0x035C5800   MOV.w A6, A7
  0x0009: 0x255C005C   SUB.w #0x00000009, A7
  0x000B: 0x03E0D800   MOV.w (A6:#0xFFFFFFFF), (#0x00000000)
  0x000E: 0x21540054   ADD.w #0x00000003, A5
  0x0010: 0x2D540054   AND.w #0xFFFFFFFC, A5
  0x0012: 0x03544000   MOV.w A0, A5
  0x0013: 0x21540054   ADD.w #0x00000064, A5
  0x0015: 0x0340D800   MOV.w (A6:#0xFFFFFFFE), A0
  0x0017: 0x03E0D800   MOV.w (A6:#0xFFFFFFFD), (#0x00000001)
  0x001A: 0x40000000   JMP.b 0x000000000000003C
  0x001C: 0x0358BC00   MOV.w -(A7), A6
  0x001D: 0x035C5800   MOV.w A6, A7
  0x001E: 0x255C005C   SUB.w #0x00000000, A7
  0x0020: 0x03E02000   MOV.w D0, (#0x00000001)
  0x0022: 0x03585C00   MOV.w A7, A6
  0x0023: 0x039C5800   MOV.w A6, (A7)+
  0x0024: 0x44000000   RET.b
  0x0025: 0x0358BC00   MOV.w -(A7), A6
  0x0026: 0x035C5800   MOV.w A6, A7
  0x0027: 0x255C005C   SUB.w #0x00000000, A7
  0x0029: 0x02E02000   MOV.b D0, (#0x00000002)
  0x002B: 0x03585C00   MOV.w A7, A6
  0x002C: 0x039C5800   MOV.w A6, (A7)+
  0x002D: 0x44000000   RET.b
  0x002E: 0x0358BC00   MOV.w -(A7), A6
  0x002F: 0x035C5800   MOV.w A6, A7
  0x0030: 0x255C005C   SUB.w #0x00000000, A7
  0x0032: 0x03585C00   MOV.w A7, A6
  0x0033: 0x039C5800   MOV.w A6, (A7)+
  0x0034: 0x44000000   RET.b
  0x0035: 0x0358BC00   MOV.w -(A7), A6
  0x0036: 0x035C5800   MOV.w A6, A7
  0x0037: 0x255C005C   SUB.w #0x00000000, A7
  0x0039: 0x03585C00   MOV.w A7, A6
  0x003A: 0x039C5800   MOV.w A6, (A7)+
  0x003B: 0x44000000   RET.b
  0x003C: 0x05E0D800   CMP.w (A6:#0xFFFFFFFD), (#0x00000003)
  0x003F: 0x68000000   BLT.b 0x0000000000000045
  0x0041: 0x03002400   MOV.w D1, #0x00000000
  0x0043: 0x40000000   JMP.b 0x0000000000000047
  0x0045: 0x03002400   MOV.w D1, #0x00000001
  0x0047: 0x04240000   CMP.b #0x00000001, D1
  0x0049: 0x60000000   BEQ.b 0x000000000000004D
  0x004B: 0x40000000   JMP.b 0x0000000000000065
  0x004D: 0x27D8E024   MUL.w (#0x00000004), (A6:#0xFFFFFFFF)
  0x0050: 0x2124E028   ADD.w (#0x00000005), D1
  0x0052: 0x2B28E024   REM.w (#0x00000006), D2
  0x0054: 0x0324D800   MOV.w (A6:#0xFFFFFFFF), D1
  0x0056: 0x03D84000   MOV.w A0, (A6:#0xFFFFFFFE)
  0x0058: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFD)
  0x005A: 0x03243400   MOV.w D5, D1
  0x005B: 0x03D8C100   MOV.w (A0:D5), (A6:#0xFFFFFFFF)
  0x005D: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFD)
  0x005F: 0x2124E028   ADD.w (#0x00000007), D1
  0x0061: 0x0328D800   MOV.w (A6:#0xFFFFFFFD), D2
  0x0063: 0x40000000   JMP.b 0x000000000000003C
  0x0065: 0x21540054   ADD.w #0x00000003, A5
  0x0067: 0x2D540054   AND.w #0xFFFFFFFC, A5
  0x0069: 0x03544000   MOV.w A0, A5
  0x006A: 0x21540054   ADD.w #0x00000064, A5
  0x006C: 0x0340D800   MOV.w (A6:#0xFFFFFFFC), A0
  0x006E: 0x03E0D800   MOV.w (A6:#0xFFFFFFFB), (#0x00000001)
  0x0071: 0x40000000   JMP.b 0x0000000000000073
  0x0073: 0x05E0D800   CMP.w (A6:#0xFFFFFFFB), (#0x00000003)
  0x0076: 0x68000000   BLT.b 0x000000000000007C
  0x0078: 0x03002400   MOV.w D1, #0x00000000
  0x007A: 0x40000000   JMP.b 0x000000000000007E
  0x007C: 0x03002400   MOV.w D1, #0x00000001
  0x007E: 0x04240000   CMP.b #0x00000001, D1
  0x0080: 0x60000000   BEQ.b 0x0000000000000084
  0x0082: 0x40000000   JMP.b 0x000000000000009C
  0x0084: 0x27D8E024   MUL.w (#0x00000004), (A6:#0xFFFFFFFF)
  0x0087: 0x2124E028   ADD.w (#0x00000005), D1
  0x0089: 0x2B28E024   REM.w (#0x00000006), D2
  0x008B: 0x0324D800   MOV.w (A6:#0xFFFFFFFF), D1
  0x008D: 0x03D84000   MOV.w A0, (A6:#0xFFFFFFFC)
  0x008F: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFB)
  0x0091: 0x03243400   MOV.w D5, D1
  0x0092: 0x03D8C100   MOV.w (A0:D5), (A6:#0xFFFFFFFF)
  0x0094: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFFB)
  0x0096: 0x2124E028   ADD.w (#0x00000007), D1
  0x0098: 0x0328D800   MOV.w (A6:#0xFFFFFFFB), D2
  0x009A: 0x40000000   JMP.b 0x0000000000000073
  0x009C: 0x21540054   ADD.w #0x00000003, A5
  0x009E: 0x2D540054   AND.w #0xFFFFFFFC, A5
  0x00A0: 0x03544000   MOV.w A0, A5
  0x00A1: 0x21540054   ADD.w #0x00000064, A5
  0x00A3: 0x0340D800   MOV.w (A6:#0xFFFFFFFA), A0
  0x00A5: 0x03E0D800   MOV.w (A6:#0xFFFFFFF9), (#0x00000001)
  0x00A8: 0x40000000   JMP.b 0x00000000000000AA
  0x00AA: 0x05E0D800   CMP.w (A6:#0xFFFFFFF9), (#0x00000003)
  0x00AD: 0x68000000   BLT.b 0x00000000000000B3
  0x00AF: 0x03002400   MOV.w D1, #0x00000000
  0x00B1: 0x40000000   JMP.b 0x00000000000000B5
  0x00B3: 0x03002400   MOV.w D1, #0x00000001
  0x00B5: 0x04240000   CMP.b #0x00000001, D1
  0x00B7: 0x60000000   BEQ.b 0x00000000000000BB
  0x00B9: 0x40000000   JMP.b 0x00000000000000E5
  0x00BB: 0x21D8D840   ADD.w (A6:#0xFFFFFFF9), (A6:#0xFFFFFFFE)
  0x00BE: 0x21D8D844   ADD.w (A6:#0xFFFFFFF9), (A6:#0xFFFFFFFC)
  0x00C1: 0x0354D800   MOV.w (A6:#0xFFFFFFF7), A5
  0x00C3: 0x21540054   ADD.w #0x00000004, A5
  0x00C5: 0x814044D8   VADD.w A1, A0
  0x00C6: 0xFFFFFFF7   ???.w (#0xFFFFFFFA), (#0x21D8D840)
  0x00C9: 0xFFFFFFF9   ???.w (#0xFFFFFFF7), (#0x03D84800)
  0x00CC: 0x03C8C000   MOV.w (A0:#0x00000000), (A2:#0x00000000)
  0x00CF: 0x03D84800   MOV.w A2, (A6:#0xFFFFFFF7)
  0x00D1: 0x03C8C000   MOV.w (A0:#0x00000001), (A2:#0x00000001)
  0x00D4: 0x03D84800   MOV.w A2, (A6:#0xFFFFFFF7)
  0x00D6: 0x03C8C000   MOV.w (A0:#0x00000002), (A2:#0x00000002)
  0x00D9: 0x03D84800   MOV.w A2, (A6:#0xFFFFFFF7)
  0x00DB: 0x03C8C000   MOV.w (A0:#0x00000003), (A2:#0x00000003)
  0x00DE: 0x21D8E024   ADD.w (#0x00000008), (A6:#0xFFFFFFF9)
  0x00E1: 0x0324D800   MOV.w (A6:#0xFFFFFFF9), D1
  0x00E3: 0x40000000   JMP.b 0x00000000000000AA
  0x00E5: 0x03E0D800   MOV.w (A6:#0xFFFFFFF8), (#0x00000001)
  0x00E8: 0x40000000   JMP.b 0x00000000000000EA
  0x00EA: 0x05E0D800   CMP.w (A6:#0xFFFFFFF8), (#0x00000003)
  0x00ED: 0x68000000   BLT.b 0x00000000000000F3
  0x00EF: 0x03002400   MOV.w D1, #0x00000000
  0x00F1: 0x40000000   JMP.b 0x00000000000000F5
  0x00F3: 0x03002400   MOV.w D1, #0x00000001
  0x00F5: 0x04240000   CMP.b #0x00000001, D1
  0x00F7: 0x60000000   BEQ.b 0x00000000000000FB
  0x00F9: 0x40000000   JMP.b 0x000000000000010A
  0x00FB: 0x03D84000   MOV.w A0, (A6:#0xFFFFFFFA)
  0x00FD: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFF8)
  0x00FF: 0x03243400   MOV.w D5, D1
  0x0100: 0x03C12800   MOV.w D2, (A0:D5)
  0x0101: 0xA3042800   OUT.w #4, D2
  0x0102: 0x03D82400   MOV.w D1, (A6:#0xFFFFFFF8)
  0x0104: 0x2124E028   ADD.w (#0x00000007), D1
  0x0106: 0x0328D800   MOV.w (A6:#0xFFFFFFF8), D2
  0x0108: 0x40000000   JMP.b 0x00000000000000EA
  0x010A: 0x03585C00   MOV.w A7, A6
  0x010B: 0x039C5800   MOV.w A6, (A7)+
  0x010C: 0x44000000   RET.b
log: ' INFO TICK 21333 | Result : 0'
